src/objects/Account_API_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Details for connecting to the API at account.companieshouse.gov.uk.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this on one and only one setting record to have the code use it.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <inlineHelpText>Identifies this Salesforce app for Forms Enablement to the account.companieshouse.gov.uk API. Not a secret, can be shown in URLs and in client side code.</inlineHelpText>
        <label>Client ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <inlineHelpText>Secret identifying this Salesforce.com Forms Enablement app to the account.companieshouse.gov.uk API. Should not be shown in URLs or client side code.</inlineHelpText>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <inlineHelpText>Hostname for the environment. Leave off the scheme.</inlineHelpText>
        <label>Host</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account API Settings</label>
</CustomObject>